--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -2,3 +2,41 @@
   width: 100%;
   height: 525px;
 }
+
+.profileImage img {
+  object-fit: cover;
+}
+
+.profileText {
+  position: relative;
+  padding: 16px 14px;
+}
+
+.downArrow {
+  width: 48px;
+  height: 48px;
+  border-radius: 24px;
+  background-color: green;
+  position: absolute;
+  top: -28px;
+  right: 24px;
+}
+
+.nameAndAge {
+  display: flex;
+}
+
+.name {
+  font-family: 'Inter', sans-serif;
+  font-size: 35px;
+  color: #424242;
+  font-weight: 700;
+  margin-right: 14px;
+}
+
+.age {
+  font-family: 'Inter', sans-serif;
+  font-size: 35px;
+  color: #424242;
+  font-weight: 400;
+}
