--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,39 @@
 .App {
   text-align: center;
+  display: grid;
+  place-items: center;
+  height: 100%;
+  width: 100%;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 50px;
+  margin-top: 40px;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+.container {
+  max-width: 380px;
+  max-height: 100px;
+  margin-top: 40px;
+}
+
+.gallery {
+  height: 600px;
+  border-radius: 20px;
+  object-fit: cover;
+}
+
+.cardContainer {
+  height: 100%;
+  width: 100%;
+}
+
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
